# Gluon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  unity.cmake
include/: abortion.hpp  arrays.hpp  assemblies.hpp  backtrace_helpers.hpp  boxing.hpp  byref.hpp  classes.hpp  exceptions.hpp  fields.hpp  gc.hpp  gluon_config.hpp  gluon_logging.hpp  hashing.hpp  il2cpp_functions.hpp  il2cpp_gc.hpp  il2cpp_internals.hpp  methods.hpp  properties.hpp  result.hpp  size_concepts.hpp  type_check.hpp  type_concepts.hpp  wrapper_base.hpp  wrappers.hpp  wrappers_array.hpp  wrappers_delegate.hpp  wrappers_disposal.hpp  wrappers_enum.hpp  wrappers_list.hpp  wrappers_object.hpp  wrappers_pointer.hpp  wrappers_string.hpp  wrappers_value.hpp  xref_helpers.hpp
platform/: il2cpp-config-platform.h
src/: abortion.cpp  assemblies.cpp  backtrace_helpers.cpp  classes.cpp  exceptions.cpp  fields.cpp  gc.cpp  gluon_logging.cpp  il2cpp_functions.cpp  il2cpp_gc.cpp  il2cpp_internals.cpp  methods.cpp  properties.cpp  type_check.cpp  wrappers.cpp  xref_helpers.cpp
